# napi_rs

./: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  simple-test.js
json/Ped_cm/: CM_Key_total.json  CM_Kim.json  CM_dong.json  CM_key_Kim.json  CM_key_dong.json  CM_total.json  Sigma_proof.json
json/Proof_vk/: VK.json  proof_Kim.json  proof_dong.json
src/: lib.rs  prove.rs  setup.rs  tool.rs  verify.rs
